# candydemo

./: .gitignore  CANDY_demo.ipynb  CMakeLists.txt  Candy.cpp  README.md  setup.py  test.py
candysrc/: Galois-2.2.1  Ins_Del1.hpp  Page_rank.h  README.md  SP_structure.hpp  SSSP_structure.h  Single_source_shortest_path.h  adaptive.h  ce_TestGraph1  create_edgelist.cpp  create_tree.hpp  directedGraph  file_0.txt  galoisinput  galoisoutput  graphconvertoutput  iniPR_test_graph  main_Page_rank.cpp  main_code.cpp  mapping.cpp  mapping.h  output.txt  pr  pr.h  readinSSSP_data.h  readin_data.hpp  scriptAK1.sh  scriptAK_Gnutella04_In.sh  scriptAK_Gnutella04_Out.sh  scriptAK_Gnutella05_InOut.sh  scriptAK_Gnutella06_InOut.sh  scriptAK_Gnutella24_InOut.sh  scriptAK_Gnutella30_InOut.sh  scriptAK_Gnutella31_InOut.sh  scriptAK_GnutellaAll_15low_5low.sh  sparsify.cpp  test12  test2.txt  test3  testCe  (+4 more)
include/: adaptive.h
includes/ESSENS/ESSENS/Basic_Analysis/Level0/ADJ/: btw_centrality.hpp  cls_centrality.hpp  clustering_coefficient.hpp  degree_centrality.hpp  random_walk.hpp
includes/ESSENS/ESSENS/Basic_Analysis/Metrics/: cls_centrality.hpp  nmi.hpp  nmi_computation.hpp
includes/ESSENS/ESSENS/Basic_Change/Level0/ADJ/: add_edge.hpp  del_edge.hpp
includes/ESSENS/ESSENS/Basic_Change/Level1/ADJ/: add_multiple_edge.hpp
includes/ESSENS/ESSENS/Core/Basic_SetOps/Level0/: compare_elements.hpp  extract_elements.hpp
includes/ESSENS/ESSENS/Core/Basic_SetOps/Level1/: order_elements.hpp
notebooks/: CANDY_demo.ipynb
(+15 files in other folders)
