cmake_minimum_required(VERSION 3.13)
project(candy)
set(CMAKE_CXX_STANDARD 14)

include_directories(includes/ESSENS/ESSENS)
include_directories(candysrc)
find_package(OpenMP)
if (OPENMP_FOUND)
    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
    set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif()
find_package(PythonInterp REQUIRED)
include_directories(../include)
include_directories(${PYTHON_INCLUDE_DIRS})
#find_package(pybind11 REQUIRED)
add_subdirectory(pybind11)
pybind11_add_module(candy Candy.cpp)
