cmake_minimum_required(VERSION 3.20)
project(candy)
set(CMAKE_CXX_STANDARD 14)

include_directories(includes/ESSENS/ESSENS)
include_directories(candysrc)
find_package(OpenMP REQUIRED)
if (OPENMP_FOUND)
    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
    set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif()
find_package(PythonInterp REQUIRED)
include_directories(../include)
include_directories(${PYTHON_INCLUDE_DIRS})

add_custom_target(copy-notebook cp ${CMAKE_SOURCE_DIR}/notebooks/CANDY_demo.ipynb ${CMAKE_BINARY_DIR})

add_subdirectory(pybind11 REQUIRED)
pybind11_add_module(candy Candy.cpp)
add_dependencies(candy copy-notebook)
